# ganttly

./: .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: test.yml
allocaly/: excel_repository.py
ganttly/: activity_service.py  cli.py  dto.py  excel_repository.py  gantly_command.py  gantt_chart_aggregator.py  gantt_chart_generator.py
tests/: activity_dto_helper.py  gantt_chart_generator_test.py  test_activity_service.py  test_excel_repository.py  test_ganttly_command_factory.py
tests/allocaly/: test_excel_repository.py
tests/ganttly/: activity_dto_helper.pytest_ganttly_command_factory.py  gantt_chart_generator_test.py  test_activity_service.py  test_excel_repository.py
tests/resources/: test_plan.xlsx
