[tool.poetry]
name = "ganttly"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include="ganttly"}
]
[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.23.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
